welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:18: error: ';' expected but string literal found.
    print "1"
          ^ZigZag:23: error: ';' expected but string literal found.
    print "2"
          ^ZigZag:28: error: ';' expected but string literal found.
    print "3"
          ^